# r-uber

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  tests.yml
src/: argument.rs  configuration.rs  logger.rs  main.rs
src/configuration/: configuration.rs  configuration_reader.rs  event.rs  mod.rs  reader.rs
src/event/: event_consumer.rs  event_producer.rs  event_uber.rs  mod.rs
src/race/: mod.rs  races.rs  reader.rs  uber.rs  uber_input.rs  uber_output.rs
src/race_action/: local.rs  mod.rs  sftp.rs
tests/: config.json  configurations.json  races.json
tools/: init.sh
tools/docker/: docker-compose.yml
tools/schemas/: races-schema.json
