[package]
name = "r-uber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
kafka = "0.10.0"
notify = "6.1.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
ssh-rs = { version = "0.4.1", features = ["scp"] }
