[package]
name = "r-uber"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
config = "0.13.3"
kafka = "0.10.0"
log = "0.4.20"
notify = "6.1.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
ssh-rs = { version = "0.4.1", features = ["scp"] }
